# tjsonl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  docs.yml  feature.yml  refactor.yml  research.yml  task.yml  test.yml
.github/workflows/: auto-merge-sync-pr.yml  coo-on-assign.yml  substrate-staleness-lint.yml  tj-tests.yml
hooks/: pre-commit
spec/: README.md  transcript-schema-spec.md  transcript-schema.json
src/coo_transcripts_analysis/: __init__.py
src/coo_transcripts_analysis/tj/: __init__.py  _spec.py  cli.py  extract.py  validate.py
src/coo_transcripts_analysis/tj/_bundled/: __init__.py
src/tjsonl/: __init__.py  _spec.py  cli.py  validate.py  walk.py
src/tjsonl/_bundled/: CLAUDE.md  __init__.py  transcript-schema.json
tests/: test_cli.py  test_extract.py  test_validate.py  test_walk.py
tests/fixtures/: clean_minimal.jsonl  malformed_lines.jsonl  missing_required.jsonl  missing_type.jsonl  resume_with_two_session_start.jsonl  unknown_attachment.jsonl
tests/integration/: test_session_start_resume.py
