[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tjsonl"
version = "0.1.0"
description = "Claude Code transcript jsonl schema extractor + validator (tj)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "vade-app COO" },
]
keywords = [
  "claude-code",
  "transcript",
  "jsonl",
  "schema",
  "validator",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7,<9"]

[project.scripts]
tj = "tjsonl.cli:main"

[project.urls]
Homepage = "https://github.com/vade-app/tjsonl"
Issues = "https://github.com/vade-app/vade-agent-logs/issues/381"
Spec = "https://github.com/vade-app/tjsonl/blob/main/spec/transcript-schema-spec.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tjsonl"]
# The JSONSchema spec ships inside the package at
# tjsonl/tj/_bundled/transcript-schema.json so it is
# loadable via importlib.resources in any install shape (editable, wheel,
# sdist, zipapp). The repo-root spec/transcript-schema.json is a symlink
# to the same file so external readers find it at the canonical docs path.

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/spec",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CLAUDE.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
  "integration: requires the local R2 transcript cache under transcripts/",
]
